模块化设计，修复冲突和BUG

--- a/DuiMini/DuiMini.vcxproj
+++ b/DuiMini/DuiMini.vcxproj
@@ -51,8 +51,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Core\Resource\UIResFile.h" />
+    <ClInclude Include="Core\Resource\UIResource.h" />
+    <ClInclude Include="Core\Resource\UIResRC.h" />
+    <ClInclude Include="Core\Resource\UIResZip.h" />
     <ClInclude Include="Core\UIDefine.h" />
-    <ClInclude Include="Core\UIResource.h" />
+    <ClInclude Include="Core\UIInterface.h" />
     <ClInclude Include="Core\UISystem.h" />
     <ClInclude Include="DuiMini.h" />
     <ClInclude Include="resource.h" />
@@ -65,12 +69,16 @@
     <ClInclude Include="thirdpart\zlib\unzip.h" />
     <ClInclude Include="thirdpart\zlib\zconf.h" />
     <ClInclude Include="thirdpart\zlib\zlib.h" />
+    <ClInclude Include="Utils\UIException.h" />
     <ClInclude Include="Utils\UIRecLog.h" />
     <ClInclude Include="Utils\UIUnzip.h" />
     <ClInclude Include="Utils\UIUtils.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Core\UIResource.cpp" />
+    <ClCompile Include="Core\Resource\UIResFile.cpp" />
+    <ClCompile Include="Core\Resource\UIResource.cpp" />
+    <ClCompile Include="Core\Resource\UIResRC.cpp" />
+    <ClCompile Include="Core\Resource\UIResZip.cpp" />
     <ClCompile Include="Core\UISystem.cpp" />
     <ClCompile Include="DuiMini.cpp" />
     <ClCompile Include="StdAfx.cpp" />
@@ -94,6 +102,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release-Static|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release-Static|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="Utils\UIException.cpp" />
     <ClCompile Include="Utils\UIRecLog.cpp" />
     <ClCompile Include="Utils\UIUnzip.cpp" />
     <ClCompile Include="Utils\UIUtils.cpp" />
@@ -102,8 +111,58 @@
     <ResourceCompile Include="DuiMini.rc" />
   </ItemGroup>
   <ItemGroup>
-    <Library Include="thirdpart\zlib\zlib_x64.lib" />
-    <Library Include="thirdpart\zlib\zlib_x86.lib" />
+    <Library Include="thirdpart\zlib\zlib_x64.lib">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release-Static|Win32'">
+      </ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+      </ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release-StaticUnicode|Win32'">
+      </ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release-Unicode|Win32'">
+      </ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+      </ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug-Unicode|Win32'">
+      </ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release-Static|x64'">
+      </ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+      </ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release-StaticUnicode|x64'">
+      </ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release-Unicode|x64'">
+      </ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+      </ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug-Unicode|x64'">
+      </ExcludedFromBuild>
+    </Library>
+    <Library Include="thirdpart\zlib\zlib_x86.lib">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release-Static|Win32'">
+      </ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+      </ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release-StaticUnicode|Win32'">
+      </ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release-Unicode|Win32'">
+      </ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+      </ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug-Unicode|Win32'">
+      </ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release-Static|x64'">
+      </ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+      </ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release-StaticUnicode|x64'">
+      </ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release-Unicode|x64'">
+      </ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+      </ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug-Unicode|x64'">
+      </ExcludedFromBuild>
+    </Library>
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
