--- a/DuiMini/DuiMini.vcxproj.filters
+++ b/DuiMini/DuiMini.vcxproj.filters
@@ -129,9 +129,6 @@
     <ClInclude Include="Core\Resource\UIResource.h">
       <Filter>头文件\Core\Resource</Filter>
     </ClInclude>
-    <ClInclude Include="Core\UIDialog.h">
-      <Filter>头文件\Core</Filter>
-    </ClInclude>
     <ClInclude Include="UIDefine.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -155,6 +152,9 @@
     </ClInclude>
     <ClInclude Include="Core\UIConfig.h">
       <Filter>头文件\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Control\UIDialog.h">
+      <Filter>头文件\Control</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -200,9 +200,6 @@
     <ClCompile Include="Core\Resource\UIResource.cpp">
       <Filter>源文件\Core\Resource</Filter>
     </ClCompile>
-    <ClCompile Include="Core\UIDialog.cpp">
-      <Filter>源文件\Core</Filter>
-    </ClCompile>
     <ClCompile Include="Control\Layout\UIContainer.cpp">
       <Filter>源文件\Control\Layout</Filter>
     </ClCompile>
@@ -223,6 +220,9 @@
     </ClCompile>
     <ClCompile Include="Core\UIConfig.cpp">
       <Filter>源文件\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="Control\UIDialog.cpp">
+      <Filter>源文件\Control</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
