--- a/DuiMini/DuiMini.vcxproj
+++ b/DuiMini/DuiMini.vcxproj
@@ -54,6 +54,7 @@
     <ClInclude Include="Control\Layout\UIContainer.h" />
     <ClInclude Include="Control\UIControl.h" />
     <ClInclude Include="Control\UIDialog.h" />
+    <ClInclude Include="Control\UIImage.h" />
     <ClInclude Include="Core\Render\UIRender.h" />
     <ClInclude Include="Core\Render\UIRenderGDIP.h" />
     <ClInclude Include="Core\Resource\UIResFile.h" />
@@ -86,6 +87,7 @@
     <ClCompile Include="Control\Layout\UIContainer.cpp" />
     <ClCompile Include="Control\UIControl.cpp" />
     <ClCompile Include="Control\UIDialog.cpp" />
+    <ClCompile Include="Control\UIImage.cpp" />
     <ClCompile Include="Core\Render\UIRender.cpp" />
     <ClCompile Include="Core\Render\UIRenderGDIP.cpp" />
     <ClCompile Include="Core\Resource\UIResFile.cpp" />
