--- a/DuiMini/DuiMini.vcxproj
+++ b/DuiMini/DuiMini.vcxproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Control\Layout\UIContainer.h" />
+    <ClInclude Include="Control\UIButton.h" />
     <ClInclude Include="Control\UIControl.h" />
     <ClInclude Include="Control\UIDialog.h" />
     <ClInclude Include="Control\UIImage.h" />
@@ -85,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Control\Layout\UIContainer.cpp" />
+    <ClCompile Include="Control\UIButton.cpp" />
     <ClCompile Include="Control\UIControl.cpp" />
     <ClCompile Include="Control\UIDialog.cpp" />
     <ClCompile Include="Control\UIImage.cpp" />
